# eec_codes

./: README.md
Local_Molel_Caspar/catkin_ws/: README.md
Local_Molel_Caspar/catkin_ws/build-src-Desktop_Qt_5_9_1_GCC_64bit-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
Local_Molel_Caspar/catkin_ws/build-src-Desktop_Qt_5_9_1_GCC_64bit-Default/catkin_generated/: generate_cached_setup.py  order_packages.py  setup_cached.sh
Local_Molel_Caspar/catkin_ws/build-src-Desktop_Qt_5_9_1_GCC_64bit-Default/devel/: .catkin  .rosinstall  setup.sh
Local_Molel_Caspar/catkin_ws/build-src-Desktop_Qt_5_9_1_GCC_64bit-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
Local_Molel_Caspar/catkin_ws/build-src-Desktop_Qt_5_9_1_GCC_64bit-Default/local_model_estimation/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  local_model_estimation-gnulinux.pc  local_model_estimation.cbp
Local_Molel_Caspar/catkin_ws/devel/: .rosinstall  setup.sh
Local_Molel_Caspar/catkin_ws/src/: CMakeLists.txt  CMakeLists.txt.user.6941d83
Local_Molel_Caspar/catkin_ws/src/local_model_estimation/: CMakeLists.txt  package.xml  run.sh
Local_Molel_Caspar/catkin_ws/src/local_model_estimation/config/: surface_identification_config.xml  surface_identification_config.xml~
Local_Molel_Caspar/catkin_ws/src/local_model_estimation/deploy/: deploy.lua  deploy.ops
Local_Molel_Caspar/catkin_ws/src/local_model_estimation/src/: CMakeLists.txt  Makefile  extended_kalman_filter.cpp  extended_kalman_filter.hpp  kalman_model.cpp  kalman_model.hpp  surface_identification_config.cpp  surface_identification_config.h  surface_identification_filter.cpp  surface_identification_filter.h  surface_measurement_manager_component.cpp  surface_measurement_manager_component.hpp  surface_measurement_model.cpp  surface_measurement_model.h  surface_prediction_model.cpp  surface_prediction_model.h
OCTGrabber/devel/: .catkin  .rosinstall  setup.sh
OCTGrabber/devel/lib/ascan_distance/: ascan_distance_node
OCTGrabber/devel/lib/ascan_grab/: ascan_grab_node
OCTGrabber/devel/lib/ascan_grab_robot/: ascan_grab_robot_node
OCTGrabber/devel/lib/ascan_grab_xyz/: ascan_grab_xyz_node
OCTGrabber/devel/lib/pkgconfig/: ascan_distance.pc  ascan_grab.pc  ascan_grab_robot.pc  ascan_grab_xyz.pc
OCTGrabber/src/ascan_processing/ascan_distance/: CMakeLists.txt  (+3 more)
(+27 files in other folders)
