<package>
  <name>local_model_estimation</name>
  <version>1.0.0</version>
  <description>Local model estimation project</description>
  <maintainer email="caspar.gruijthuijsen@kuleuven.be">Caspar Gruijthuijsen</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Caspar Gruijthuijsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <run_depend>rtt</run_depend>

  <!-- optionally: add dependencies -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>rtt_std_msgs</build_depend>
  <run_depend>rtt_std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>


  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
